--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="etTitle_hint">Title is mandatory</string>
+    <string name="etTitle_label">Title (File Name)</string>
 </resources>
