--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,18 @@
     <string name="btRedo_text">Redo</string>
     <string name="saving_path">Saving path:</string>
     <string name="btChangePath_title">Select Folder</string>
+    <string name="tvAbout_text">SNotepad is simple yet professional notepad app for android. The S
+                stands for Suckless/Simple.&lt;br/&gt;
+                While you enjoy the features of top modern notepad apps like multiple notes management
+                and search, SNotepad doesn\'t save notes in a special database but instead directly on
+                internal storage or SDCard. That means you need not to worry about backing up your
+                valuable notes or export them every once in a while in case you changed your phone
+                or lost it. You can also define the save path in settings dialog. You can even give
+                it address of your owncloud folder if you have OwnCloud app installed. Therefor you
+                can have all your notes backed up by OwnCloud.&lt;br/&gt;
+                &lt;br/&gt;
+                It takes a lot of time and effort to write a software. If you found SNotepad usefull,
+                please consider making a donation by clicking this button here.&lt;br/&gt;
+                Thanks.</string>
+    <string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=UJTM2GDGPEFHA</string>
 </resources>
