Improved some texts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="btRedo_text">Redo</string>
     <string name="saving_path">Saving path:</string>
     <string name="btChangePath_title">Select Folder</string>
+    <string name="tvVersion_text">Version: 1.0.0</string>
     <string name="tvAbout_text">SNotepad is simple yet professional notepad app for android. The S
                 stands for Suckless/Simple.&lt;br/&gt;
                 While you enjoy the features of top modern notepad apps like multiple notes management
@@ -20,8 +21,9 @@
                 it address of your owncloud folder if you have OwnCloud app installed. Therefor you
                 can have all your notes backed up by OwnCloud.&lt;br/&gt;
                 &lt;br/&gt;
-                It takes a lot of time and effort to write a software. If you found SNotepad usefull,
-                please consider making a donation by clicking the button on bottom right.&lt;br/&gt;
+                SNotepad is open source. It takes a lot of time and effort to write a software.
+                If you found SNotepad usefull, please consider making a donation by clicking the
+                button on bottom right.&lt;br/&gt;
                 Thanks.</string>
     <string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=UJTM2GDGPEFHA</string>
     <string name="save_dialog_question">You have unsaved changes. Do you want to save them?</string>
