--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,8 @@
     <string name="saving_path">Saving path:</string>
     <string name="btChangePath_title">Select Folder</string>
     <string name="tvVersion_text">Version: 1.0.0</string>
-    <string name="tvAbout_text">SNotepad is simple yet professional notepad app for android. The S
+    <string name="tvAbout_text">Copyright Aario Shahbany 2017<br/><br/>
+                SNotepad is simple yet professional notepad app for android. The S
                 stands for Suckless/Simple.&lt;br/&gt;
                 While you enjoy the features of top modern notepad apps like multiple notes management
                 and search, SNotepad doesn\'t save notes in a special database but instead directly on
