--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">SNotepad</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_sort_by_name">Sort by Name</string>
+    <string name="action_sort_by_date">Sort by Date</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="etTitle_hint">Title is mandatory</string>
@@ -10,7 +12,7 @@
     <string name="btRedo_text">Redo</string>
     <string name="saving_path">Saving path:</string>
     <string name="btChangePath_title">Select Folder</string>
-    <string name="tvVersion_text">Version: 1.0.0</string>
+    <string name="tvVersion_text">Version: </string>
     <string name="tvAbout_text">Copyright (C) 2017 Aario Shahbany&lt;br/&gt;&lt;br/&gt;
                 SNotepad is simple yet professional notepad app for android. The S
                 stands for Suckless/Simple.&lt;br/&gt;
