General cosmetic fixes
Icon appearance and layout
About Screen is now an activity
Donate button is a regular button, not fab
Irrelevant menu items do not show when editorFragment is visible (sort/refresh)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="pref_title_settings">Settings</string>
     <string name="pref_title_system_settings">System Settings</string>
     <string name="save_location">Save Location</string>
+    <string name="donate_call_to_action">Donate now via PayPal</string>
     <string-array
         name="save_location_names">
         <item>internal (deleted with uninstall)</item>
