--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,36 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">SNotepad</string>
-    <string name="action_refresh">Refresh</string>
-    <string name="action_sort_by_name">Sort by Name</string>
-    <string name="action_sort_by_date">Sort by Date</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_about">About</string>
-    <string name="etTitle_hint">Title is mandatory</string>
-    <string name="etTitle_label">Title (File Name)</string>
-    <string name="action_delete">Delete</string>
-    <string name="btUndo_title">Undo</string>
-    <string name="btRedo_text">Redo</string>
-    <string name="saving_path">Saving path:</string>
-    <string name="btChangePath_title">Select Folder</string>
-    <string name="tvVersion_text">Version: </string>
-    <string name="tvAbout_text">Copyright (C) 2017 Aario Shahbany&lt;br/&gt;&lt;br/&gt;
-                SNotepad is simple yet professional notepad app for android. The S
-                stands for Suckless/Simple.&lt;br/&gt;
-                While you enjoy the features of top modern notepad apps like multiple notes management
-                and search, SNotepad doesn\'t save notes in a special database but instead directly on
-                internal storage or SDCard. That means you need not to worry about backing up your
-                valuable notes or export them every once in a while in case you changed your phone
-                or lost it. You can also define the save path in settings dialog. You can even give
-                it address of your owncloud folder if you have OwnCloud app installed. Therefor you
-                can have all your notes backed up by OwnCloud.&lt;br/&gt;
-                &lt;br/&gt;
-                SNotepad is open source. It takes a lot of time and effort to write a software.
-                If you found SNotepad usefull, please consider making a donation by clicking the
-                button on bottom right.&lt;br/&gt;
-                Thanks.</string>
-    <string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=UJTM2GDGPEFHA</string>
-    <string name="save_dialog_question">You have unsaved changes. Do you want to save them?</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="cancel">Cancel</string>
+    <string name="app_name">SNotePad</string>
 </resources>
